<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/head_height">

    <View
        android:id="@+id/head_bg"
        style="@style/head"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintDimensionRatio="2.43"
        app:layout_constraintStart_toStartOf="@id/head_bg"
        app:layout_constraintTop_toTopOf="@id/head_bg"
        app:layout_constraintBottom_toBottomOf="@id/head_bg"
        android:clickable="true"
        android:onClick="doMenuStart"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/menu_task"
        style="@style/menu"
        android:onClick="doMenuTask"
        android:text="@string/task"
        app:layout_constraintEnd_toStartOf="@id/menu_config"
        app:layout_constraintTop_toTopOf="@id/head_bg" />

    <Button
        android:id="@+id/menu_config"
        style="@style/menu"
        android:text="@string/config"
        android:onClick="doMenuConfig"
        app:layout_constraintEnd_toStartOf="@id/menu_log"
        app:layout_constraintTop_toTopOf="@id/head_bg"/>

    <Button
        android:id="@+id/menu_log"
        style="@style/menu"
        android:text="@string/log"
        android:onClick="doMenuLog"
        app:layout_constraintEnd_toStartOf="@id/menu_help"
        app:layout_constraintTop_toTopOf="@id/head_bg"/>

    <Button
        android:id="@+id/menu_help"
        style="@style/menu"
        android:text="@string/help"
        android:onClick="doMenuHelp"
        app:layout_constraintEnd_toEndOf="@id/head_bg"
        app:layout_constraintTop_toTopOf="@id/head_bg"/>

</androidx.constraintlayout.widget.ConstraintLayout>