<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".config">

    <include
        android:id="@+id/head"
        layout="@layout/inc_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:text="@string/title_config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head"/>

    <ScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/scroll_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:focusable="true"
                android:focusableInTouchMode="true"> <!--拦截屏蔽内层自动聚焦-->

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/row_space">
                    <TextView
                        style="@style/label"
                        android:text="@string/config_robot"
                        android:layout_column="0"/>
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_column="1">
                        <RadioButton
                            android:id="@+id/robot_y"
                            style="@style/check"
                            android:text="@string/config_robot_y" />
                        <RadioButton
                            android:id="@+id/robot_n"
                            style="@style/check"
                            android:text="@string/config_robot_n" />
                    </RadioGroup>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/row_space">
                    <TextView
                        style="@style/label"
                        android:text="@string/config_remote"
                        android:layout_column="0"/>
                    <RadioGroup
                        android:id="@+id/remotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_column="1">
                        <RadioButton
                            android:id="@+id/remote_y"
                            style="@style/check"
                            android:text="@string/dialog_btn_y" />
                        <RadioButton
                            android:id="@+id/remote_n"
                            style="@style/check"
                            android:text="@string/dialog_btn_n" />
                    </RadioGroup>
                </TableRow>

                <LinearLayout
                    android:id="@+id/remote_div"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/row_space">
                    <TextView
                        style="@style/label"
                        android:text="@string/config_user"
                        android:layout_column="0"/>
                    <EditText
                        android:id="@+id/user"
                        style="@style/input"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_column="1"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/row_space">
                    <TextView
                        style="@style/label"
                        android:text="@string/config_pass"
                        android:layout_column="0"/>
                    <EditText
                        android:id="@+id/pass"
                        style="@style/input"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:layout_column="1"/>
                </TableRow>
                </LinearLayout>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/row_space">
                    <TextView
                        style="@style/label"
                        android:text="@string/config_notice"
                        android:layout_column="0"/>
                    <CheckBox
                        android:id="@+id/notice"
                        style="@style/check"
                        android:layout_column="1" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/row_space">
                    <TextView
                        style="@style/label"
                        android:text="@string/config_log"
                        android:layout_column="0"/>
                    <EditText
                        android:id="@+id/logs"
                        style="@style/input"
                        android:hint="（天）"
                        android:inputType="number"
                        android:layout_column="1"/>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/submit"
                style="@style/submit"
                android:onClick="doSave"
                android:text="@string/add_config"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>