<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".log_do">

    <include
        android:id="@+id/head"
        layout="@layout/inc_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/scroll_padding_notitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_underline"
                    android:padding="10dp">
                    <TextView
                        style="@style/label"
                        android:layout_gravity="right"
                        android:paddingRight="10dp"
                        android:text="@string/log_id"
                        android:layout_column="0"/>
                    <TextView
                        android:id="@+id/log_id"
                        style="@style/content"
                        android:layout_column="1"/>
                </TableRow>

                <LinearLayout
                    android:id="@+id/log_div"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_underline"
                    android:padding="10dp">

                    <TextView
                        style="@style/label"
                        android:layout_gravity="right"
                        android:paddingRight="10dp"
                        android:text="@string/log_tid"
                        android:layout_column="0"/>
                    <TextView
                        android:id="@+id/log_tid"
                        style="@style/content"
                        android:layout_column="1"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_underline"
                    android:padding="10dp">
                    <TextView
                        style="@style/label"
                        android:layout_gravity="right"
                        android:paddingRight="10dp"
                        android:text="@string/log_fid"
                        android:layout_column="0"/>
                    <TextView
                        android:id="@+id/log_fid"
                        style="@style/content"
                        android:layout_column="1"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_underline"
                    android:padding="10dp">
                    <TextView
                        style="@style/label"
                        android:layout_gravity="right"
                        android:paddingRight="10dp"
                        android:text="@string/log_memo"
                        android:layout_column="0"/>
                    <TextView
                        android:id="@+id/log_memo"
                        style="@style/content"
                        android:layout_column="1"/>
                </TableRow>

                </LinearLayout>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_underline"
                    android:padding="10dp">
                    <TextView
                        style="@style/label"
                        android:layout_gravity="right"
                        android:paddingRight="10dp"
                        android:text="@string/log_val"
                        android:layout_column="0"/>
                    <TextView
                        android:id="@+id/log_val"
                        style="@style/content"
                        android:layout_column="1"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_underline"
                    android:padding="10dp">
                    <TextView
                        style="@style/label"
                        android:layout_gravity="right"
                        android:paddingRight="10dp"
                        android:text="@string/log_res"
                        android:layout_column="0"/>
                    <TextView
                        android:id="@+id/log_res"
                        style="@style/content"
                        android:layout_column="1"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_underline"
                    android:padding="10dp">
                    <TextView
                        style="@style/label"
                        android:layout_gravity="right"
                        android:paddingRight="10dp"
                        android:text="@string/log_time"
                        android:layout_column="0"/>
                    <TextView
                        android:id="@+id/log_time"
                        style="@style/content"
                        android:layout_column="1"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>